--- a/src/wechat/index.css
+++ b/src/wechat/index.css
@@ -12,6 +12,6 @@
     -webkit-line-clamp: 3
 }
 .page-index_active{
-    background-color: #154977!important;
+    background-color: #6c72ff!important;
     color: #fff;
 }
