--- a/src/home/index.css
+++ b/src/home/index.css
@@ -11,7 +11,7 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3
 }
-.page-index_active{
+/* .page-index_active{
     background-color: #154977!important;
     color: #fff;
-}
+} */
